tests/should_fail/type_invariants/partial_instance.coma
module M_partial_instance__mk_s
  use creusot.prelude.Opaque
  use creusot.prelude.Ptr
  use creusot.int.UInt64
  use creusot.int.Int32
  use creusot.prelude.Any
  
  predicate is_null_logic (self: Opaque.ptr) = Ptr.addr_logic_u64 self = (0: UInt64.t)
  
  let rec null (return' (x: Opaque.ptr)) = any
    [ return''0 (result: Opaque.ptr) -> {is_null_logic result} (! return' {result}) ]
  
  type t_S = { t_S__0: Int32.t; t_S__1: Opaque.ptr }
  
  predicate inv (_0: t_S)
  
  axiom inv_axiom: forall x: t_S [inv x]. inv x
      -> match x with
        | {t_S__0 = a_0; t_S__1 = a_1} -> true
        end
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec mk_s (t: Int32.t) (return' (x: t_S)) = (! bb0
    [ bb0 = s0 [ s0 = null (fun (_ret: Opaque.ptr) -> [ &_5 <- _ret ] s1) | s1 = bb1 ]
    | bb1 = s0 [ s0 = [ &_0 <- { t_S__0 = t'0; t_S__1 = _5 } ] s1 | s1 = return''0 {_0} ] ]
    [ & _0: t_S = Any.any_l () | & t'0: Int32.t = t | & _5: Opaque.ptr = Any.any_l () ])
    [ return''0 (result: t_S) -> {[@expl:mk_s result type invariant] inv result}
      {[@expl:mk_s ensures] result.t_S__0 = t}
      (! return' {result}) ]
end
module M_partial_instance__evil
  use creusot.int.Int32
  use creusot.prelude.Opaque
  use creusot.prelude.Any
  
  type t_S = { t_S__0: Int32.t; t_S__1: Opaque.ptr }
  
  predicate invariant' (self: t_S) = Int32.to_int self.t_S__0 = 0
  
  predicate inv (_0: t_S)
  
  axiom inv_axiom [@rewrite]: forall x: t_S [inv x]. inv x
      = (invariant' x
      /\ match x with
        | {t_S__0 = a_0; t_S__1 = a_1} -> true
        end)
  
  let rec mk_s (t: Int32.t) (return' (x: t_S)) = any
    [ return''0 (result: t_S) -> {inv result} {result.t_S__0 = t} (! return' {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec evil (return' (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = mk_s {(1: Int32.t)} (fun (_ret: t_S) -> [ &_s <- _ret ] s1) | s1 = bb1 ]
    | bb1 = s0 [ s0 = {[@expl:assertion] false} s1 | s1 = return''0 {_0} ] ]
    [ & _0: () = Any.any_l () | & _s: t_S = Any.any_l () ]) [ return''0 (result: ()) -> (! return' {result}) ]
end
